--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
     "pages": [
-        "pages/welcome/welcome"
+        "pages/welcome/welcome",
+        "pages/posts/post"
+
     ],
     "window": {
         "navigationBarBackgroundColor": "#b3d4db"
