--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
     "pages": [
-               "pages/welcome/welcome",
-        "pages/posts/posts"
-        
+        "pages/welcome/welcome",
+        "pages/posts/posts",
+        "pages/posts/posts-detail/posts-detail"
     ],
     "window": {
         "navigationBarBackgroundColor": "#b3d4db"
