--- a/app.json
+++ b/app.json
@@ -6,5 +6,17 @@
     ],
     "window": {
         "navigationBarBackgroundColor": "#405f80"
+    },
+    "tabBar": {
+        "list": [
+            {
+                "pagePath": "pages/movies/movies",
+                "text": "电影"
+            },
+            {
+                "pagePath": "pages/posts/posts",
+                "text": "文章"
+            }
+        ]
     }
 }
