--- a/app.json
+++ b/app.json
@@ -2,20 +2,26 @@
     "pages": [
         "pages/welcome/welcome",
         "pages/posts/posts",
-        "pages/posts/posts-detail/posts-detail"
+        "pages/posts/posts-detail/posts-detail",
+        "pages/movies/movies"
     ],
     "window": {
         "navigationBarBackgroundColor": "#405f80"
     },
     "tabBar": {
+        "borderStyle": "white",
         "list": [
             {
-                "pagePath": "pages/movies/movies",
-                "text": "电影"
+                "pagePath": "pages/posts/posts",
+                "text": "阅读",
+                "iconPath": "images/tab/yuedu.png",
+                "selectedIconPath": "images/tab/yuedu_hl.png"
             },
             {
-                "pagePath": "pages/posts/posts",
-                "text": "文章"
+                "pagePath": "pages/movies/movies",
+                "text": "电影",
+                "iconPath": "images/tab/dianying.png",
+                "selectedIconPath": "images/tab/dianying_hl.png"
             }
         ]
     }
