--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
         "pages/welcome/welcome",
         "pages/posts/posts",
         "pages/posts/posts-detail/posts-detail",
-        "pages/movies/movies"
+        "pages/movies/movies",
+        "pages/movies/more-movie/more-movie"
     ],
     "window": {
         "navigationBarBackgroundColor": "#405f80"
